# ros_reality_pr2

./: .gitmodules  README.md
ros_reality/: CMakeLists.txt  package.xml
ros_reality/Assets/Resources/URDFs/PR2/: pr2.xml
ros_reality/Assets/Resources/URDFs/PR2/base_v0/: caster.dae  caster_L.dae  pr2_wheel.dae
ros_reality/Assets/Resources/URDFs/PR2/forearm_v0/: wrist_roll.dae  wrist_roll_L.dae
ros_reality/Assets/Resources/URDFs/PR2/upper_arm_v0/: forearm_roll.dae
ros_reality/Assets/Scenes/: PositionControl.unity
ros_reality/Assets/Scripts/: ArmController.cs  CameraListener.cs  DepthImageListener.cs  DepthRosGeometryView.cs  DepthRosTextureView.cs  EinMenuScript.cs  IKStatus.cs  ProjectorListener.cs  TFListener.cs  TrajectoryController.cs  URDFParser.cs
ros_reality/Assets/Shaders/: DepthGeometryJoinedQuads.shader  DepthGeometryPointSprites.shader
ros_reality/ProjectSettings/: ProjectSettings.asset
ros_reality/launch/: ros_reality_pr2.launch
ros_reality/scripts/: launch_unity3d.py  launch_unity3d.sh
